--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,8 @@
   "description": "",
   "main": "",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "bootstrap": "^3.3.7"
+  }
 }
